# proxy-speedtest

./: .gitignore  Cargo.toml  flake.nix
speedtest-controller/: Cargo.toml
speedtest-controller/src/: lib.rs  main.rs  plugin.rs  plugin_loader.rs  process.rs  speedtest.rs
speedtest-controller/src/plugin/: json_rpc.rs
speedtest-plugins/: Cargo.toml
