[package]
name = "speedtest-controller"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
jsonrpsee = {version = "0.21.0", features = ["client", "server"]}
thiserror = "1.0.56"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
async-trait = "0.1.77"
config = "0.13.4"
tokio = { version = "1", features = ["full"] }
tokio-util = {version = "0.7", features = ["codec"]}
futures = "0.3"
regex = "1.10.3"
url = {version="2.5.0", features=["serde"]}
log = "0.4"
env_logger = "0.11"
clap = { version = "4.4.18", features = ["derive"] }
